# StorageManager

./: README.md
.github/workflows/: azure-container-webapp.yml  docker-publish-db.yml  docker-publish-kc.yml  docker-publish-mq.yml
backend/db/: Dockerfile
backend/keycloak/: Dockerfile  realm-export.json
backend/mq/: Dockerfile  config.mqsc
backend/spring/: .gitignore  settings.gradle.kts
backend/spring/entityservice/: build.gradle.kts  settings.gradle.kts
backend/spring/entityservice/src/main/java/hu/bme/mit/alf/manuel/entityservice/: EntityService.java
backend/spring/entityservice/src/test/java/hu/bme/mit/alf/manuel/entityservice/: EntityserviceApplicationTests.java
backend/spring/mqclient/: build.gradle.kts  settings.gradle.kts
backend/spring/mqclient/src/main/java/hu/bme/mit/alf/manuel/mqclient/: MqConfig.java  MqService.java
backend/spring/reporting/: build.gradle.kts
backend/spring/reporting/src/main/resources/: application.properties
backend/spring/reporting/src/main/resources/templates/: emailTemplates.html
backend/spring/strgman/: build.gradle.kts  settings.gradle.kts
backend/spring/strgman/src/main/resources/: application.properties
frontend/: .gitignore
frontend/StorageManager/: CMakeLists.txt  locationservice.cpp  locationservice.h  loginservice.cpp  loginservice.h  main.cpp  main.qml  productservice.cpp  productservice.h  reportingservice.cpp  reportingservice.h  restaccessmanager.cpp  stockservice.cpp  stockservice.h  userservice.cpp  userservice.h  util.cpp  util.h
(+56 files in other folders)
